# URDF_Robodog

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py  sim.launch.py
rviz/: urdf.rviz
src/: joint_state_node.cpp  marker_publisher.cpp
urdf/: Robodog.urdf  Robodog.urdf.xacro  Robodog_leg.urdf.xacro
